# Chunky-Monkey

./: .gitignore  EXPLANATION.md  README.md  pyproject.toml
examples/: basic_usage.py  custom_embeddings.py  end_to_end_rag.py  markdown_chunking.py  multi_format.py  pdf_chunking.py  semantic_chunking.py  with_openai_tokenizer.py
src/monkey/: __init__.py  files.py
src/monkey/core/: __init__.py  chunker.py  schema.py  segmentation.py
src/monkey/parsers/: __init__.py  base.py  data.py  docx.py  html.py  markdown.py  pdf.py  plaintext.py
src/monkey/semantic/: __init__.py  boundaries.py
src/monkey/tokenizers/: __init__.py  base.py  character.py  huggingface_.py  tiktoken_.py
src/monkey/validators/: __init__.py  integrity.py
tests/: __init__.py  test_chunker.py  test_data_parsers.py  test_files.py  test_html_parser.py  test_markdown.py  test_schema.py  test_segmentation.py  test_tokenizers.py  test_validators.py
